--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ numpy = "^2.1.0"
 pandas = "^2.2.2"
 tqdm = "^4.66.5"
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.6.7"
+
 
 [build-system]
 requires = ["poetry-core"]
