--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 pydantic = "^2.8.2"
-fastapi = {extras = ["standard"], version = "^0.112.2"}
+fastapi = "^0.112.2"
+fastapi-cli = "^0.0.5"
 uvicorn = "^0.30.6"
 gunicorn = "^23.0.0"
 torch = "^2.4.0"
